[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/ui/ui.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/SHOWG.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://assets/images/firstPage/assets1280x720.png" type="Texture" id=3]
[ext_resource path="res://assets/images/hpBarProgress.png" type="Texture" id=4]
[ext_resource path="res://assets/images/hpBarOver.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "start"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/readyGo:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 1.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Ready", "Ready", "Go", "Go" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1.1, 1.3, 1.6, 2.2, 2.4 ),
"transitions": PoolRealArray( 0.4, 0.4, 0.4, 0.4, 1, 0.4, 0.4, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 2.4, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=6]

[sub_resource type="DynamicFont" id=7]
size = 100
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 2 )

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Sprite" parent="."]
position = Vector2( 86.3842, 1156.45 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 671.005, 396.08, 90.25, 103.788 )

[node name="pauseBtn" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 48.0
margin_top = 1110.0
margin_right = 142.0
margin_bottom = 1206.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lives" type="Node2D" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="lives"]
margin_left = 113.181
margin_top = 29.5992
margin_right = 394.181
margin_bottom = 89.5992
step = 0.1
value = 70.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.00392157, 0.0196078, 0.168627, 1 )
tint_progress = Color( 0, 1, 0.882353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="oxy" type="Sprite" parent="lives"]
position = Vector2( 70.5331, 56.9324 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 653.419, 291.956, 84.4534, 88.2349 )

[node name="lifeTimer" type="Timer" parent="lives"]

[node name="scoreText" type="Label" parent="."]
margin_left = 527.691
margin_top = 40.9068
margin_right = 706.691
margin_bottom = 86.907
custom_fonts/font = SubResource( 1 )
text = "Meters"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreCount" type="Label" parent="."]
margin_left = 414.387
margin_top = 96.8867
margin_right = 696.39
margin_bottom = 142.887
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins" type="Sprite" parent="."]
position = Vector2( 68.4111, 230.887 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 565, 392, 84, 102 )

[node name="coinCount" type="Label" parent="."]
margin_left = 130.409
margin_top = 190.689
margin_right = 412.409
margin_bottom = 267.689
custom_fonts/font = SubResource( 3 )
text = "x 10"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gems" type="Sprite" parent="."]
position = Vector2( 64.8113, 146.01 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 556, 289, 97, 92 )

[node name="gemCount" type="Label" parent="."]
margin_left = 98.2684
margin_top = 116.348
margin_right = 222.268
margin_bottom = 193.348
custom_fonts/font = SubResource( 4 )
text = "x 10"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 5 )
anims/timesUp = SubResource( 6 )

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2( 344.829, 677.702 )
scale = Vector2( 0.1, 0.1 )

[node name="readyGo" type="Label" parent="Node2D"]
margin_left = -258.818
margin_top = -169.877
margin_right = 293.182
margin_bottom = 197.123
custom_fonts/font = SubResource( 7 )
text = "Ready"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="depthTimer" type="Timer" parent="."]
[connection signal="button_up" from="pauseBtn" to="." method="_on_pauseBtn_button_up"]
[connection signal="timeout" from="lives/lifeTimer" to="." method="_on_lifeTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="depthTimer" to="." method="_on_depthTimer_timeout"]
